# industrialbenchmark

./: .classpath  .gitignore  .project  LICENCE.txt  README.markdown  README.txt  assembly.xml  pom.xml  setup.py
datasets/: global_1.0_100x1000_30frames.pickle  readme.markdown
datasets/bad/: bad_0.0_100x1000_30frames.pickle  bad_0.2_100x1000_30frames.pickle  bad_0.4_100x1000_30frames.pickle  bad_0.6_100x1000_30frames.pickle  bad_0.8_100x1000_30frames.pickle
datasets/mediocre/: mediocre_0.0_100x1000_30frames.pickle  mediocre_0.2_100x1000_30frames.pickle  mediocre_0.4_100x1000_30frames.pickle  (+2 more)
industrial_benchmark_java/: assembly.xml  pom.xml
industrial_benchmark_openai/: DQN_KerasRL_IBDiscrete.py  OpenAI_IB.py
industrial_benchmark_python/: EffectiveAction.py  IBGym.py  IDS.py  all_States.csv  all_States0.csv  all_States1.csv  all_States2.csv  all_States3.csv  all_States4.csv  example.py  muster.csv  operational_States.csv  operational_States0.csv  operational_States1.csv  operational_States2.csv  operational_States3.csv  operational_States4.csv  pyproject.toml  test_baselines.py  test_gym_wrapper.py  test_industrial_benchmark_python.py
industrial_benchmark_python/goldstone/: dynamics.py  environment.py  nlgp.py  reward_function.py
industrial_benchmark_python/test_data/: markovStates0.csv  markovStates1.csv  markovStates2.csv  markovStates3.csv  markovStates4.csv  markovStates5.csv  markovStates6.csv  markovStates7.csv  markovStates8.csv  markovStates9.csv
industrial_benchmark_wrapper/: agent.py  example_run.py  interpreter.py  model.py
(+85 files in other folders)
