[tool.poetry]
name = "industrial_benchmark_python"
version = "2.0.0"
description = "Industrial benchmark for Python."
authors = ["D. Hein, S. Depeweg, M. Tokic, S. Udluft, A. Hentschel, P. Swazinna"]

[tool.poetry.dependencies]
python = "~3.7"
numpy = "^1.16"
gym = "^0.15.3"
matplotlib = "^3.2.1"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
